api integration in the home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -86,22 +86,23 @@
                     <p class="categories-text">Electronics</p>
                   </div>
                   <div class="text-center">
-                      <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
-                        <p class="categories-text">more</p></button>
-                      <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
-                          <img class="menu-img" src="assets/images/categories/food-dining.png">
-                          <span class="categories-text">Food & Dining</span>
-                        </button>
-                        <button mat-menu-item>
-                          <img class="menu-img" src="assets/images/categories/apparel.png">
-                          <span class="categories-text">Fashion & Apparel</span>
-                        </button>
-                        <button mat-menu-item>
-                          <img class="menu-img" src="assets/images/categories/health-fitness.png">
-                          <span class="categories-text">Health & Fitness</span>
-                        </button>
-                      </mat-menu>
+                    <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
+                      <p class="categories-text">more</p>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item>
+                        <img class="menu-img" src="assets/images/categories/food-dining.png">
+                        <span class="categories-text">Food & Dining</span>
+                      </button>
+                      <button mat-menu-item>
+                        <img class="menu-img" src="assets/images/categories/apparel.png">
+                        <span class="categories-text">Fashion & Apparel</span>
+                      </button>
+                      <button mat-menu-item>
+                        <img class="menu-img" src="assets/images/categories/health-fitness.png">
+                        <span class="categories-text">Health & Fitness</span>
+                      </button>
+                    </mat-menu>
                   </div>
                 </div>
                 <div class="row m-0 mt-3">
@@ -233,9 +234,10 @@
                     <img src="assets/images/categories/electronics.png">
                     <p class="categories-text">Electronics</p>
                   </div>
-                  <div class="text-center">          
+                  <div class="text-center">
                     <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
-                      <p class="categories-text">more</p></button>
+                      <p class="categories-text">more</p>
+                    </button>
                     <mat-menu #menu="matMenu">
                       <button mat-menu-item>
                         <img class="menu-img" src="assets/images/categories/food-dining.png">
@@ -391,22 +393,23 @@
                     <p class="categories-text">Electronics</p>
                   </div>
                   <div class="text-center">
-                      <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
-                        <p class="categories-text">more</p></button>
-                      <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
-                          <img class="menu-img" src="assets/images/categories/food-dining.png">
-                          <span class="categories-text">Food & Dining</span>
-                        </button>
-                        <button mat-menu-item>
-                          <img class="menu-img" src="assets/images/categories/apparel.png">
-                          <span class="categories-text">Fashion & Apparel</span>
-                        </button>
-                        <button mat-menu-item>
-                          <img class="menu-img" src="assets/images/categories/health-fitness.png">
-                          <span class="categories-text">Health & Fitness</span>
-                        </button>
-                      </mat-menu>
+                    <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
+                      <p class="categories-text">more</p>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item>
+                        <img class="menu-img" src="assets/images/categories/food-dining.png">
+                        <span class="categories-text">Food & Dining</span>
+                      </button>
+                      <button mat-menu-item>
+                        <img class="menu-img" src="assets/images/categories/apparel.png">
+                        <span class="categories-text">Fashion & Apparel</span>
+                      </button>
+                      <button mat-menu-item>
+                        <img class="menu-img" src="assets/images/categories/health-fitness.png">
+                        <span class="categories-text">Health & Fitness</span>
+                      </button>
+                    </mat-menu>
                   </div>
                 </div>
                 <div class="row m-0 mt-3">
