--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -125,8 +125,7 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-6 clr-white f-28">
-                    <span class="f-bold">03</span><span class="px-3">Coupons Selected</span><span><a
-                            class="btn-white f-bold">
+                    <span class="f-bold">03</span><span class="px-3">Coupons Selected</span><span><a class="btn-white f-bold">
                             Clear all</a></span>
                 </div>
                 <div class="col-md-6 text-right">
