--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -106,94 +106,31 @@
                   </div>
                 </div>
                 <div class="row m-0 mt-3">
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/5374.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/5454.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
+                  <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
+                    <div class="outline-none" [routerLink]="['/productdetails']">
+                      <img class="card-img prod-image" src="{{item.webOfferImage1}}" alt="">
+                      <div class="desc">
+                        <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
+                        <div class="col-12 p-0 m-height-150">
+                          <div class="row m-0 pt-3">
+                            <div class="col-8 pl-4 pr-0">
+                              <div class="max-h-65">
+                              <img class="max-w-30" src="{{item.mobileOfferImage2}}" alt="">
+                              </div>
+                              <p>{{item.lmdescription}}</p>
+                            </div>
+                            <div class="col-4">
+                              <p class="clr-green f-bold">{{item.lmofferValue}} {{item.lmofferType}}</p>
+                            </div>
                           </div>
                         </div>
                       </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']"
-                          [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
                     </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/7913.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
+                    <div class="text-center save-btn-pos">
+                      <button class="btn-clr-blue-save">
+                       Save</button>
                     </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/1601.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
-                    </div>
+
                   </div>
                 </div>
               </div>
@@ -255,92 +192,27 @@
                   </div>
                 </div>
                 <div class="row m-0 mt-3">
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/group.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
+                  <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
+                    <div  class="outline-none" [routerLink]="['/productdetails']">
+                      <img class="card-img" src="{{item.webOfferImage1}}" alt="">
+                      <div class="desc">
+                        <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
+                        <div class="col-12 p-0 m-height-150">
+                          <div class="row m-0 pt-3">
+                            <div class="col-8 pl-4 pr-0">
+                              <img class="max-w-30" src="{{item.mobileOfferImage2}}" alt="">
+                              <p>{{item.lmdescription}}</p>
+                            </div>
+                            <div class="col-4">
+                              <p class="clr-green f-bold">{{item.lmofferValue}} {{item.lmofferType}}</p>
+                            </div>
                           </div>
                         </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/1601.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/7913.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/354.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
+                    <div class="text-center save-btn-pos">
+                      <a class="btn-clr-blue-save">
+                        Save</a>
                     </div>
                   </div>
                 </div>
@@ -414,93 +286,30 @@
                 </div>
                 <div class="row m-0 mt-3">
                   <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
-                    <img class="card-img" src="assets/images/products/354.png" alt="">
-                    <div class="desc">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                      <div class="col-12 p-0 m-height-150">
-                        <div class="row m-0 pt-3">
-                          <div class="col-8 pl-4 pr-0">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h6 class="f-bold">{{item.lmname}}</h6>
-                            <p>{{item.lmdescription}}</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">{{item.lmofferType}}</p>
+                    <div  class="outline-none" [routerLink]="['/productdetails']">
+                      <img class="card-img" src="{{item.webOfferImage1}}" alt="">
+                      <div class="desc">
+                        <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
+                        <div class="col-12 p-0 m-height-150">
+                          <div class="row m-0 pt-3">
+                            <div class="col-8 pl-4 pr-0">
+                              <!--  <span class="f-9 f-bold">BRAND OFFER</span> -->
+                              <img class="max-w-30" src="{{item.mobileOfferImage2}}" alt="">
+                              <p>{{item.lmdescription}}</p>
+                            </div>
+                            <div class="col-4">
+                              <p class="clr-green f-bold">{{item.lmofferValue}} {{item.lmofferType}}</p>
+                            </div>
                           </div>
                         </div>
                       </div>
-                      <div class="text-center save-btn-pos">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
+                    </div>
+                    <div class="text-center save-btn-pos">
+                      <a class="btn-clr-blue-save">
+                        Save</a>
                     </div>
                   </div>
-                  <!-- <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/1601.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/5454.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 image-trans p-1">
-                    <img class="card-img" src="assets/images/products/5374.png" alt="">
-                    <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
-                    <div class="desc">
-                      <div class="col-12 p-0">
-                        <div class="row m-0">
-                          <div class="col-8 pl-4">
-                            <span class="f-9 f-bold">BRAND OFFER</span>
-                            <h5 class="f-bold">ZARA</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                          </div>
-                          <div class="col-4">
-                            <p class="clr-green f-bold">$ 9 off</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="text-center m-minus16">
-                        <a class="btn-clr-blue-save" [routerLink]="['/productdetails']">
-                          <img src="assets/images/icons/save.png" alt=""> Save</a>
-                      </div>
-                    </div>
-                  </div> -->
+
                 </div>
               </div>
             </ng-template>
