remove the services and add the save btn in the home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -108,7 +108,7 @@
                 <div class="row m-0 mt-3">
                   <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
                     <div class="outline-none" [routerLink]="['/productdetails']">
-                      <img class="card-img prod-image" src="{{item.webOfferImage1}}" alt="">
+                      <img class="img-fluid" src="{{item.webOfferImage1}}" alt="">
                       <div class="desc">
                         <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
                         <div class="col-12 p-0 m-height-150">
@@ -194,7 +194,7 @@
                 <div class="row m-0 mt-3">
                   <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
                     <div  class="outline-none" [routerLink]="['/productdetails']">
-                      <img class="card-img" src="{{item.webOfferImage1}}" alt="">
+                      <img class="img-fluid" src="{{item.webOfferImage1}}" alt="">
                       <div class="desc">
                         <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
                         <div class="col-12 p-0 m-height-150">
@@ -211,8 +211,8 @@
                       </div>
                     </div>
                     <div class="text-center save-btn-pos">
-                      <a class="btn-clr-blue-save">
-                        Save</a>
+                      <button class="btn-clr-blue-save">
+                        Save</button>
                     </div>
                   </div>
                 </div>
@@ -287,7 +287,7 @@
                 <div class="row m-0 mt-3">
                   <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
                     <div  class="outline-none" [routerLink]="['/productdetails']">
-                      <img class="card-img" src="{{item.webOfferImage1}}" alt="">
+                      <img class="img-fluid" src="{{item.webOfferImage1}}" alt="">
                       <div class="desc">
                         <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
                         <div class="col-12 p-0 m-height-150">
@@ -305,8 +305,8 @@
                       </div>
                     </div>
                     <div class="text-center save-btn-pos">
-                      <a class="btn-clr-blue-save">
-                        Save</a>
+                      <button class="btn-clr-blue-save">
+                        Save</button>
                     </div>
                   </div>
 
