--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -12,7 +12,7 @@
                         equip with the latest products, comes the monetary constraint.</p>
                     <div>
                         <a class="btn-clr-blue-save">
-                            <img src="assets/images/icons/save.png" alt="save"> Save</a>
+                           Save</a>
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -138,12 +138,10 @@
                     <div class="prod-details-btns-save-print">
                         <div class="row">
                             <div class="col-sm-6">
-                                <a class="btn-clr-blue-save">
-                                    <img src="assets/images/save.png" alt="save"> Save</a>
+                                <a class="btn-clr-blue-save"> Save</a>
                             </div>
                             <div class="col-sm-6 text-left">
-                                <a class="btn-clr-blue-save">
-                                    <img src="assets/images/save.png" alt="print"> Print It</a>
+                                <a class="btn-clr-blue-save">Print It</a>
                             </div>
                         </div>
                     </div>
