--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,15 @@
     <div class="container mt-0">
       <form class="waves-light" mdbWavesEffect>
         <div class="md-form pt-5 pb-5 text-center">
-          <input class="form-control cus-search" type="text" placeholder="search for the best offers near you">
+          <div class="input-group cus-search">
+            <input type="text" class="form-control" placeholder="Search for the best offers near you">
+            <div class="input-group-append">
+              <button class="btn btn-secondary bg-blue" type="button" [routerLink]="['/result']">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+         <!--  <input class="form-control cus-search" type="text" placeholder="search for the best offers near you"> -->
         </div>
       </form>
     </div>
@@ -28,35 +36,35 @@
             <ng-template ngbTabContent>
               <div class="tab-pane fade active show" id="all" role="tabpanel" aria-labelledby="all-tab">
                 <div class="images-container pt-5">
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/food-dining.png">
                     <p class="categories-text">Food & Dining</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/apparel.png">
                     <p class="categories-text">Fashion & Apparel</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/health-fitness.png">
                     <p class="categories-text">Health & Fitness</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/home_appliances.png">
                     <p class="categories-text">Home Appliances</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/entertainment.png">
                     <p class="categories-text">Entertainment</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/medical.png">
                     <p class="categories-text">Medicines & Drugs</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/electronics.png">
                     <p class="categories-text">Electronics</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
                       <p class="categories-text">more</p>
                     </button>
@@ -79,11 +87,11 @@
                 <div class="row m-0 mt-3">
                   <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
                     <div class="outline-none" [routerLink]="['/productdetails']">
-                      <img class="img-fluid" src="{{item.webOfferImage1}}" alt="">
+                      <img class="img-fluid cursor-pointer" src="{{item.webOfferImage1}}" alt="">
                       <div class="desc">
                         <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
                         <div class="col-12 p-0 m-height-150">
-                          <div class="row m-0 pt-3">
+                          <div class="row m-0 pt-3 cursor-pointer">
                             <div class="col-8 pl-4 pr-0">
                               <div class="max-h-65">
                               <img class="max-w-30" src="{{item.mobileOfferImage2}}" alt="">
@@ -98,10 +106,9 @@
                       </div>
                     </div>
                     <div class="text-center save-btn-pos">
-                      <button class="btn-clr-blue-save">
-                       Save</button>
+                      <button class="btn-clr-blue-save" (click)="addToCartLocal(localOfferDetails)">
+                        Save</button>
                     </div>
-
                   </div>
                 </div>
               </div>
@@ -114,35 +121,35 @@
             <ng-template ngbTabContent>
               <div class="tab-pane fade active show" id="celeb" role="tabpanel" aria-labelledby="Celeb-tab">
                 <div class="images-container pt-5">
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/food-dining.png">
                     <p class="categories-text">Food & Dining</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/apparel.png">
                     <p class="categories-text">Fashion & Apparel</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/health-fitness.png">
                     <p class="categories-text">Health & Fitness</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/home_appliances.png">
                     <p class="categories-text">Home Appliances</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/entertainment.png">
                     <p class="categories-text">Entertainment</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/medical.png">
                     <p class="categories-text">Medicines & Drugs</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/electronics.png">
                     <p class="categories-text">Electronics</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
                       <p class="categories-text">more</p>
                     </button>
@@ -165,11 +172,11 @@
                 <div class="row m-0 mt-3">
                   <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
                     <div  class="outline-none" [routerLink]="['/productdetails']">
-                      <img class="img-fluid" src="{{item.webOfferImage1}}" alt="">
+                      <img class="img-fluid cursor-pointer" src="{{item.webOfferImage1}}" alt="">
                       <div class="desc">
                         <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
                         <div class="col-12 p-0 m-height-150">
-                          <div class="row m-0 pt-3">
+                          <div class="row m-0 pt-3 cursor-pointer">
                             <div class="col-8 pl-4 pr-0">
                               <img class="max-w-30" src="{{item.mobileOfferImage2}}" alt="">
                               <p>{{item.lmdescription}}</p>
@@ -182,7 +189,7 @@
                       </div>
                     </div>
                     <div class="text-center save-btn-pos">
-                      <button class="btn-clr-blue-save">
+                      <button class="btn-clr-blue-save" (click)="addToCartLocal(localOfferDetails)">
                         Save</button>
                     </div>
                   </div>
@@ -207,35 +214,35 @@
             <ng-template ngbTabContent>
               <div class="tab-pane fade  active show" id="brand" role="tabpanel" aria-labelledby="brand-tab">
                 <div class="images-container pt-5">
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/food-dining.png">
                     <p class="categories-text">Food & Dining</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/apparel.png">
                     <p class="categories-text">Fashion & Apparel</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/health-fitness.png">
                     <p class="categories-text">Health & Fitness</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/home_appliances.png">
                     <p class="categories-text">Home Appliances</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/entertainment.png">
                     <p class="categories-text">Entertainment</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/medical.png">
                     <p class="categories-text">Medicines & Drugs</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <img src="assets/images/categories/electronics.png">
                     <p class="categories-text">Electronics</p>
                   </div>
-                  <div class="text-center">
+                  <div class="text-center cursor-pointer">
                     <button mat-button [matMenuTriggerFor]="menu"><img src="assets/images/icons/more.png">
                       <p class="categories-text">more</p>
                     </button>
@@ -258,11 +265,11 @@
                 <div class="row m-0 mt-3">
                   <div class="col-md-3 image-trans p-1" *ngFor="let item of localOfferDetails">
                     <div  class="outline-none" [routerLink]="['/productdetails']">
-                      <img class="img-fluid" src="{{item.webOfferImage1}}" alt="">
+                      <img class="img-fluid cursor-pointer" src="{{item.webOfferImage1}}" alt="">
                       <div class="desc">
                         <img class="card-img bg-transparent" src="assets/images/coupon-background.png" alt="">
                         <div class="col-12 p-0 m-height-150">
-                          <div class="row m-0 pt-3">
+                          <div class="row m-0 pt-3 cursor-pointer">
                             <div class="col-8 pl-4 pr-0">
                               <!--  <span class="f-9 f-bold">BRAND OFFER</span> -->
                               <img class="max-w-30" src="{{item.mobileOfferImage2}}" alt="">
@@ -312,7 +319,7 @@
         </div>
         <div class="col-3 wrap-txt-right position-absolute ">
           <div class="row">
-            <h5 class="col-form-label clr-blue-light f-bold">Browser</h5>
+            <h5 class="col-form-label clr-blue-light f-bold">Browse</h5>
           </div>
         </div>
       </div>
